--- a/projeto_ecommerce-principal/core/templates/index.html
+++ b/projeto_ecommerce-principal/core/templates/index.html
@@ -12,6 +12,7 @@
     <main><h1>Projeto Django com MYSQL</h1>
             <a class="btn btn-primary" href="/contato" role="button">Contato</a>
             <a class="btn btn-primary" href="/produto" role="button">Cadastro de Produto</a>
+            <a class="btn btn-primary" href="/consultaprodutos" role="button">Consultar produto</a>
     </main>
 {% bootstrap_javascript jquery='full' %}  
 </body>
